--- a/package.json
+++ b/package.json
@@ -18,5 +18,20 @@
   "bugs": {
     "url": "https://github.com/yenote-app/yenote.app/issues"
   },
-  "homepage": "https://github.com/yenote-app/yenote.app#readme"
+  "homepage": "https://github.com/yenote-app/yenote.app#readme",
+  "devDependencies": {
+    "@types/node": "^20.8.8",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint": "^8.52.0",
+    "eslint-plugin-react": "^7.33.2",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "sass": "^1.69.4",
+    "sass-loader": "^13.3.2",
+    "ts-loader": "^9.5.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "webpack": "^5.89.0"
+  }
 }
