--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "ts-node ./scripts/build.ts",
+    "_build": "webpack --mode=production --node-env=production",
+    "_build:dev": "webpack --mode=development",
+    "_build:prod": "webpack --mode=production --node-env=production",
+    "_watch": "webpack --watch",
+    "_serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -20,18 +26,28 @@
   },
   "homepage": "https://github.com/yenote-app/yenote.app#readme",
   "devDependencies": {
+    "@types/express": "^4.17.20",
     "@types/node": "^20.8.8",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "@webpack-cli/generators": "^3.0.7",
+    "css-loader": "^6.8.1",
     "eslint": "^8.52.0",
     "eslint-plugin-react": "^7.33.2",
+    "express": "^4.18.2",
+    "glob": "^10.3.10",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
-    "sass": "^1.69.4",
+    "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "webpack": "^5.89.0"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
