--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yenote-app-website",
+  "name": "@yenote-app/server",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
